[BACKLOG-38043] Final touches. - Only adjust popup on mouse over MenuItem - Popup left is width of parent menu, accounts for presence of scrollbar - Prevent popup menu from appearing off top of screen by limiting top to just beneath the burger bar - use new "scroll" tag

--- a/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
+++ b/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
@@ -1787,10 +1787,9 @@ hr {
 
 .tabsSubMenuBar {
   position: relative;
-  left: -40px;
 }
 
-.tabsMenuContextSubMenu{
+.tabsMenuContextSubMenu, .tabsSubMenuBar{
   overflow-y: auto;
 }
 
